@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  metadata.xml, amarok-2.0.2.ebuild:
+  added useflag for external qtscriptgenerator
+
 *amarok-2.0.2 (30 Mar 2009)
 
   30 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
